--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "Simple todo application using Express and MongoDB",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
